# gccl

./: CMakeLists.txt  README.md
configs/: dev_graph.json  gpu1.json  gpu2.json  gpu4.json  gpu8.json
examples/: gag.cc
scripts/: build.sh  clang-format.py  mpi_wrapper.sh  run_gag.sh
src/: communicator.cc  communicator.h  config.cc  config.h  coordinator.cc  coordinator.h  core.cc  core.h  gccl.cc  gccl.h  global_state.h  graph.cc  graph.h  init.cc  json_utils.h  param.h  partitioner.cc  partitioner.h  transport.cc  transport.h  utils.cc  utils.h
src/base/: bin_stream.cc  bin_stream.h  macros.h  zmq_helpers.h
src/comm/: comm_info.cc  comm_info.h  comm_scheduler.cc  comm_scheduler.h  comm_scheme.cc  comm_scheme.h
src/comm/pattern/: all_to_all_comm_pattern.cc  all_to_all_comm_pattern.h  comm_pattern.cc  comm_pattern.h  cost_model.cc  cost_model.h  greedy_algo.cc  greedy_algo.h  greedy_comm_pattern.cc  greedy_comm_pattern.h  ring_comm_pattern.cc  ring_comm_pattern.h
src/conn/: connection.cc  connection.h  gccl_net.h  ibvwrap.cc  ibvwrap.h  net.h  net_connection.cc  net_connection.h  net_ib.cc  nvlink.h  nvmlwrap.h  p2p_connection.cc  p2p_connection.h  shm.h  shm_connection.cc  shm_connection.h  socket.h  topo.h
src/gpu/: common.cu  common.h
src/gpu/kernel/: graph_allgather.cu  graph_allgather.h  greedy_graph_allgather.cu  greedy_graph_allgather.h  primitives.cu  primitives.h
src/topo/: dev_graph.cc  dev_graph.h
test/: CMakeLists.txt  api_unittest_cm.cc  api_unittest_mpi_gpu.cc  coordinator_unittest.cc  graph_unittest.cc  init_unittest_mpi.cc  logging_unittest.cc  param_unittest.cc  partitioner_unittest.cc  test_cuda_utils.cu  test_cuda_utils.h  test_mpi_utils.cc  test_mpi_utils.h  test_utils.h  unittest_main.cc  utils_unittest.cc
test/comm/: aa_comm_pattern_unittest.cc  comm_info_unittest.cc  comm_info_unittest_gpu.cu  comm_scheduler_unittest.cc  greedy_comm_pattern_unittest.cc  ring_comm_pattern_unittest.cc
test/gpu/kernel/: primitives_unittest_gpu.cu
